# pdf-reader-gemini

./: .gitignore  README.md
backend/: install_torch_uv.py  main.py  pyproject.toml  requirements.txt  run.bat  server.py  test_results.json  test_server.py  ui_main.py
frontend/: README.md  index.html  metadata.json  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: DocumentReader.tsx  LandingPage.tsx  MinimalControlBar.tsx  PdfPageRenderer.tsx
frontend/src/hooks/: usePdfTtsEngine.ts
