[project]
name = "pdf-reader-gemini-backend"
version = "0.1.0"
description = "FastAPI backend for PDF Reader Gemini"
requires-python = ">=3.12"
dependencies = [
    "kokoro",
    "misaki",
    "soundfile",
    "huggingface-hub",
    "pydub",
    "espeakng-loader",
    "phonemizer-fork",
    "munch",
    "setuptools",
    "librosa",
    "hf_xet",
    "fastapi",
    "uvicorn[standard]",
    "aiohttp",
    "psutil",
]
